--- a/_config.yml
+++ b/_config.yml
@@ -1,16 +1,16 @@
 title:              Clean Blog
-email:              your-email@example.com
+email:              petr.hrobar@merck.com
 description:        A Blog Theme by Start Bootstrap
 author:             Start Bootstrap
-baseurl:            "/startbootstrap-clean-blog-jekyll"
-url:                "https://startbootstrap.github.io"
+baseurl:            ""
+url:                "https://petrhrobar.github.io"
 
 # Social Profiles
-twitter_username:   SBootstrap
-github_username:    StartBootstrap
-facebook_username:  StartBootstrap
+twitter_username:   
+github_username:    petrhrobar
+facebook_username:  
 instagram_username:  
-linkedin_username:
+linkedin_username: petrhrobar
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
