--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ twitter_username:
 github_username:    petrhrobar
 facebook_username:  
 instagram_username:  
-linkedin_username: petrhrobar
+linkedin_username: https://www.linkedin.com/in/petr-hroba%C5%99-2418a1215/
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
